<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".NewSubjectDialog" >

    <TextView
            android:id="@+id/new_subject_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="italic"
            android:text="@string/new_subject_title"
            android:textColor="#0099cc"
            android:textSize="24dp"
            android:paddingTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            />

    <EditText
        android:id="@+id/fragment_subject_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_name"
        android:fontFamily="sans-serif-light"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:singleLine="true"
        android:inputType="textCapSentences"
        android:layout_marginBottom="12dp"
        style="@style/CustomEditText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="15dp">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/fragment_classes_already_bunked_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/classes_already_bunked_label"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/fragment_classes_already_bunked_field"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number"
            android:maxLength="2"
            style="@style/CustomEditText"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:padding="6dp"
            android:textSize="15dp">
        </EditText>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/fragment_limit_for_bunking_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/fragment_limit_for_bunking_field"
            android:layout_alignBottom="@+id/fragment_limit_for_bunking_field"
            android:layout_alignParentLeft="true"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="16dp"
            android:text="@string/limit_for_bunking_label"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/fragment_limit_for_bunking_field"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:maxLength="2"
            android:inputType="number"
            android:ems="10"
            style="@style/CustomEditText"
            android:gravity="center"
            android:padding="6dp"
            android:layout_marginRight="16dp"
            android:textSize="15dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/new_subject_error_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="#ff4444"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:text="@string/empty_fields_error"
        android:textSize="14dp"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#dcdcdc"
            android:layout_marginTop="16dp"
            android:id="@+id/button"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/add_multiple_subjects"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/multiple_subs_bg"
            android:id="@+id/add_multiple_subjects_button"
            android:textSize="12dp"
            android:textColor="#333"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#dcdcdc"
            />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#f5f5f5"
            >

        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/discard_text"
                android:id="@+id/new_subject_cancel_button"
                android:layout_weight="0.5"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="12dp"/>

        <TextView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#dcdcdc"
                />

        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/save_text"
                android:id="@+id/new_subject_save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="0.5"
                android:textSize="12dp"/>
    </LinearLayout>
    
</LinearLayout>