<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/enjoying_bunkometer_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#220a4563"
            >

        <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/no"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/spread_word_no_button"
                android:onClick="shareBunkometerOnClick"
                android:layout_weight="1"
                android:textColor="#67696a"
                android:textSize="12dp"/>

        <TextView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#110a4563"
                />

        <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColor="#67696a"
                android:onClick="shareBunkometerOnClick"
                android:text="@string/later"
                android:id="@+id/spread_word_later_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:textSize="12dp"/>

        <TextView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#110a4563"
                />

        <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColor="#67696a"
                android:onClick="shareBunkometerOnClick"
                android:text="@string/sure"
                android:id="@+id/spread_word_sure_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:textSize="12dp"/>
    </LinearLayout>